- Added fake_crt.c to fix a linker issue ... but it still dont work.
- Added minor changes to makeinc.dir

- Security fixes
- Added beta support for Xcode 4.4

- Added memory info to the nvidia plist structure, so now one can add several cards to the plist and set a customized name and memory info for each cards
- Implemented a method to inject new graphics cards from a plist, no need to hardcode device ids anymore !! (for now, only nvidia cards are supported, see doc/ModuleHelp.txt for usage)
- Moved the smbios detection code to the freebsd one

- Fixed a bug in the bundle dependency dispatcher

- security fixes in printf.c
- Fixed a weird bug in boot arguments that could prevent 10.8 to boot

- security, stability, bugs fixes
- moved __doprnt to the xnu version

- security and stability fixes
- Fixed a bug where prf may return a wrong string len (for ex : in the previous versions newStringWithformat("%02x%02x%02x%02x%02x%02x",101,117,104,113,103,100) may not return the entire string) 
- Fixed a bug in xml.c 
- Fixed a bug in device_inject.c (inspired from the dmazar's patch)


- security and stability fixes
- Removed useless codes in efistring modules
- Fixed bugs related to device_inject.c
- Fixed bugs related to device_tree.c
- Fixed bugs related to hfs.c
- Fixed a bug in the booterlog introduced in the previous version
- Fixed a bug in randomTheme intoduced in the previous version
- Added LoginToLion Cub Devices (credit to Enzo)


- security and stability fixes
- Improved Xcode4.3+ and clang compatibility
- Fixed a bug in device_inject.c
- Updated uthash, utarrey, etc ... to v1.9.6 
- Replaced arc4random by the freebsd version (found in darwin's libc) 
(also Removed others random generators since the pseudo-random generator now work perfectly )
- Implemented gettimeofday taken from libpayload
- finaly back to safe_malloc
- Sync'd the cpu legacy method to the trunk

- Implemented the Runtime Bundles Modules
- Updated nvidia and ati device id