@@ -40,12 +40,12 @@
   		sudo cp boot /
 	
    - Install Symbols and modules to the partition's root directory or the partition's booter  (if needed):   
-		* Symbols.dylib is absolutely needed if you plan to use any other module, 
-		* otherwise Symbols.dylib is useless, assume that /Extra is already created (if you need special permissions, use sudo)
+		* Symbols.bundle is absolutely needed if you plan to use any other module, 
+		* otherwise Symbols.bundle necessary, assume that /Extra is already created (if you need special permissions, use sudo)
 		
 		mkdir /Extra/modules
-		cp Symbols.dylib /Extra/modules 
-		cp "Any other module wanted".dylib /Extra/modules
+		cp Symbols.bundle /Extra/modules 
+		cp "Any other module wanted".bundle /Extra/modules (additionally you can also insert a bundle as a plugin in any other module, in "THE_BUNDLE".bundle/Contents/PlugIns)
 
    No need to use startupfiletool anymore!
 
@@ -57,16 +57,13 @@ FOR EXAMPLE:
  - IF YOU DON'T NEED TO PATCH THE KERNEL ON THE FLY, PLEASE DO NOT INSTALL THE KERNELPATCHER MODULE,
  - ETC,ETC,ETC
 
-PLEASE DO NOT USE ACPIPATCHER AND ACPICODEC TOGETHER, THEY DO THE SAME THING BUT IN A DIFFERENT WAY, YOU HAVE TO CHOOSE ONE OF THEM (ACPICODEC IS RECOMMENDED), THIS ISSUE WILL BE FIXED WITH THE BUNDLED MODULES
-PLEASE DO NOT USE SMBIOSGETTERS AND SMBIOSPATCHER TOGETHER, THEY DO THE SAME THING BUT IN A DIFFERENT WAY, YOU HAVE TO CHOOSE ONE OF THEM (SMBIOSGETTERS IS RECOMMENDED), THIS ISSUE WILL BE FIXED WITH THE BUNDLED MODULES 
-
 HERE IS ONE OF THE MOST COMMON USAGE:
 
-- ACPICODEC (FOR ACPI FIXES, AND IF YOU DON'T HAVE AN ALREADY PATCHED BIOS)
+- ACPICODEC and ACPIPATCHER (FOR ACPI FIXES, AND IF YOU DON'T HAVE AN ALREADY PATCHED BIOS)
 - GRAPGHICENABLER (IF YOU HAVE NOT FIXED THIS BY THE DSDT, THIS MODULE CAN ADD THE EFI STRING FOR YOUR GRAPHIC CARD)
 - GUI (IF YOU WANT A GUI)
 - KEYMAPPER (IF YOU WANT TO REMAP YOUR KEYBOARD (AN AZERTY PRESET IS AVAILABLE), SEE MODULEHELP.TXT FOR USAGE)
-- SMBIOSGETTERS (FOR SMBIOS FIXES, AND IF YOU DON'T HAVE AN ALREADY PATCHED BIOS)
+- SMBIOSGETTERS and SMBIOSPATCHER (FOR SMBIOS FIXES, AND IF YOU DON'T HAVE AN ALREADY PATCHED BIOS)
 - MEMORY (FOR RAM DETECTION, THIS MODULE IS ACTUALLY A PLUGIN FOR SMBIOSGETTERS OR SMBIOSPATCHER, AND IT WILL NOT WORK WITHOUT ONE OF THEM, IT WILL BE MORE CLEAR WITH THE BUNDLED MODULES)
 - SYMBOLS IS ABSOLUTELY NEEDED IF YOU USE AT LEAST ONE OTHER MODULE
 
@@ -102,14 +99,14 @@ LAST THING, PLEASE NOTE THAT ALL MODULES ARE ENABLED BY DEFAULT ONCE THEY ARE IN
   --------
   
   If you have any questions, issues etc. feel free to join us
-  at irc.voodooprojects.org #chameleon
+  at irc.voodooprojects.org #chameleon or http://forum.voodooprojects.org/
   
 
   Source Code
   -----------
 
   For downloading the source code please visit the project page at
-  http://chameleon.osx86.hu
+  http://forge.voodooprojects.org/p/chameleon/
 
 
   Licensing
