@@ -67,6 +67,7 @@
 #define kInsantMenuKey		"Instant Menu"
 #define kDefaultKernel		"mach_kernel"
 #define kWaitForKeypressKey	"Wait"
+
 /* AsereBLN: added the other keys */
 
 #define kProductVersion		"ProductVersion"	/* boot.c */
@@ -79,7 +80,12 @@
 #define kSystemType			"SystemType"		/* fake_efi.c */
 #define kPCIRootUID			"PCIRootUID"		/* pci_root.c */
 #define kDefaultPartition	"Default Partition"	/* sys.c */
-#define kAcpiMethod			"Acpi2Method"				// 2 (= method 2) for some machines that may hang on acpi 2 (aka acpi 64 bit) detection (replace the old kUnsafeACPI "UnsafeACPI") 	
+
+
+#define kAcpiMethod			"Acpi2Method"		// 2 (= method 2) for some machines that may hang on acpi 2 (aka acpi 64 bit) detection (replace the old kUnsafeACPI "UnsafeACPI") 	
+#define kRebootOnPanic		"RebootOnPanic"
+#define kEnableHiDPI		"EnableHiDPI"		// enable High resolution display (aka Retina)
+
 
 #define PLATFORM_NAME_LEN 64
 #define ROOT_PATH_LEN 256
