@@ -1,3 +1,5 @@
+- Added two boot options for High resolution display and reboot on kernel panic
+
 - Added fake_crt.c to fix a linker issue ... but it still dont work.
 - Added minor changes to makeinc.dir
 
